Added translation module.

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -6,8 +6,8 @@
         <span uib-dropdown>
             <span uib-dropdown-toggle class="button button-icon icon ion-android-more-vertical"></span>
             <ul uib-dropdown-menu class="pull-right">
-                <li><a href="#">Manage websites</a></li>
-                <li><a href="#"> <i class="ion-android-add-circle"></i> Add website</a></li>
+                <li><a href="#">{{ 'manage_sites' | translate }}</a></li>
+                <li><a href="#"><i class="ion-android-add-circle"></i> {{ 'add_website' | translate }} </a></li>
             </ul>
         </span>
     </ion-nav-buttons>
