Added file chooser in home screen

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
                 <div class="col">
                     <img class="cloud-image" src="img/cloud.png" />
                     <div class="btn-abs">
-                        <button ng-click="" class="button cloud-image-upload">Upload Image</button>
+                        <button ng-click="chooseImages()" class="button cloud-image-upload">{{ 'upload_image' | translate }}</button>
                     </div>
                 </div>
             </div>
