--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,11 @@
-<ion-view view-title="Cloudrexx" class="home-view app_bg" cache-view="false">
+<ion-view view-title="Cloudrexx" class="home-view" cache-view="false">
     <ion-content scroll="false">
         <div class="content-wrapper">
             <div class="row blue-cloud">
                 <div class="col">
                     <img class="cloud-image" src="img/cloud.png" />
                     <div class="btn-abs">
-                        <button ng-click="chooseImages()" class="button cloud-image-upload">{{ 'upload_image' | translate }}</button>
+                        <button ng-click="chooseImages()" class="button cloudrexx-button">{{ 'upload_image' | translate }}</button>
                     </div>
                 </div>
             </div>
