--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,10 @@ img.cloud-image {
   vertical-align: middle;
   text-align: center;
 }
+.instance-list .item {
+    overflow: visible;
+    z-index: initial;
+}
 @media (max-width: 991px) {
     img.cloud-image {
         width: 500px;
