Added Add website modal window.

--- a/templates/manageSites.html
+++ b/templates/manageSites.html
@@ -2,7 +2,7 @@
     <ion-content>
         <ion-list class="instance-list list-inset">
             <ion-item>
-                <button class="button cloudrexx-button">
+                <button ng-click="showAddWebsiteModal()" class="button cloudrexx-button">
                     {{ 'add_new' | translate }}
                 </button>
             </ion-item>
