--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,39 @@ img.cloud-image {
     overflow: visible;
     z-index: initial;
 }
+
+.ion-nifty-modal {
+  width: 90%;
+  min-height: 0 !important;
+  height: 225px !important;
+  top: 25%;
+  left: 5%;
+  right: 5%;
+  bottom: 5%;
+  background-color: transparent;
+  border-radius: 10px;
+  -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+}
+.ion-nifty-modal .ion-modal-content-custom {
+  width: 100%;
+  height: 100%;
+  color: #FFF;
+  background-color: #FFF;
+  border-radius: 10px;
+}
+/* Fix modal backdrop for smaller devices */
+@media (max-width: 679px) {
+  .active .modal-backdrop-bg {
+    opacity: .5;
+  }
+  .modal-backdrop-bg {
+    -webkit-transition: opacity 300ms ease-in-out;
+    transition: opacity 300ms ease-in-out;
+    background-color: #000;
+    opacity: 0;
+  }
+}
 @media (max-width: 991px) {
     img.cloud-image {
         width: 500px;
