--- a/templates/addWebsite.html
+++ b/templates/addWebsite.html
@@ -3,19 +3,19 @@
         <ion-content class="padding" scroll="false">
             <ion-list>
                 <label class="item item-input-inset">
-                    <input type="text" placeholder="{{ 'website_name' | translate }}">
+                    <input ng-model="instance.instanceName" type="text" placeholder="{{ 'website_name' | translate }}">
                     <span class="input-label">.cloudrexx.com</span>
                 </label>
                 <label class="item item-input">
-                    <input type="email" placeholder="{{ 'email_address' | translate }}">
+                    <input ng-model="instance.username" type="email" placeholder="{{ 'email_address' | translate }}">
                 </label>
                 <label class="item item-input">
-                    <input type="password" placeholder="{{ 'password' | translate }}">
+                    <input ng-model="instance.password" type="password" placeholder="{{ 'password' | translate }}">
                 </label>
             </ion-list>
             <div class="pull-right padding">
                 <button ng-click="closeAddWebsiteModal()" class="button cloudrexx-button">{{ 'cancel' | translate}}</button>
-                <button class="button cloudrexx-button">{{ 'submit' | translate}}</button>
+                <button ng-click="addWebsite()" class="button cloudrexx-button">{{ 'submit' | translate}}</button>
             </div>
         </ion-content>
     </div>
